CMake: Add install target, and stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,13 @@ IF ("${PHPCPP_PHP_PATH}" STREQUAL "")
   MESSAGE(FATAL_ERROR "PHP paths to sources need to be explicitly set. Use 'php-config --includes' to find it.")
 ENDIF()
 
+IF (NOT EXISTS "${PHPCPP_PHP_PATH}/main/php.h")
+  message(SEND_ERROR "The PHPCPP_PHP_PATH variable does not lead to main/php.h")
+ENDIF()
+
+#SET(CMAKE_INSTALL_LIBDIR "${CMAKE_INSTALL_PREFIX}/lib${CMAKE_LIBRARY_ARCHITECTURE}")
+SET(CMAKE_INSTALL_INCDIR "${CMAKE_INSTALL_PREFIX}/include/phpcpp")
+
 LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR})
 
 IF(CMAKE_BUILD_TYPE MATCHES DEBUG)
@@ -104,11 +111,11 @@ ELSE()
   ENDIF()
 ENDIF()
 
-FILE(GLOB PHPCPP_COMMON_SOURCES common/*.cpp)
-FILE(GLOB PHPCPP_COMMON_HEADERS common/*.h)
-FILE(GLOB PHPCPP_ZEND_SOURCES zend/*.cpp)
-FILE(GLOB PHPCPP_ZEND_HEADERS zend/*.h)
-FILE(GLOB PHPCPP_HEADERS_INCLUDE include/phpcpp/*.h)
+FILE(GLOB PHPCPP_COMMON_SOURCES CONFIGURE_DEPENDS common/*.cpp)
+FILE(GLOB PHPCPP_COMMON_HEADERS CONFIGURE_DEPENDS common/*.h)
+FILE(GLOB PHPCPP_ZEND_SOURCES CONFIGURE_DEPENDS zend/*.cpp)
+FILE(GLOB PHPCPP_ZEND_HEADERS CONFIGURE_DEPENDS zend/*.h)
+FILE(GLOB PHPCPP_HEADERS_INCLUDE CONFIGURE_DEPENDS include/phpcpp/*.h)
 
 LINK_DIRECTORIES(${PHP_LIB_PATH})
 
@@ -131,6 +138,9 @@ ELSE()
     phpcpp.h
   )
 ENDIF()
+
+INSTALL(FILES ${PHPCPP_HEADERS_INCLUDE} DESTINATION ${CMAKE_INSTALL_INCDIR})
+INSTALL(TARGETS phpcpp)
 
 SET_TARGET_PROPERTIES(phpcpp
   PROPERTIES
