CMake: Install API header

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,6 +139,7 @@ ELSE()
   )
 ENDIF()
 
+INSTALL(FILES phpcpp.h TYPE INCLUDE)
 INSTALL(FILES ${PHPCPP_HEADERS_INCLUDE} DESTINATION ${CMAKE_INSTALL_INCDIR})
 INSTALL(TARGETS phpcpp)
 
